modifications sujets suite aux retours de romain et cyrille

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -59,7 +59,7 @@
                             src="{{ site.baseurl }}/assets/80x15.png" /></a>
                     <a href="https://github.com/mgasquet">Malo Gasquet</a>,         
                     <a href="https://github.com/romainlebreton">Romain Lebreton</a>,
-					<a href="https://github.com/cnadal">Cyril Nadal</a> et
+					<a href="https://github.com/cnadal">Cyrille Nadal</a> et
                     <a href="https://github.com/matthieu-rosenfeld">Matthieu Rosenfeld</a>
                     {{ site.time | date:"%Y" }}, licensed
                     under <a rel="license" class="print-link"
